--- a/api/src/templates/new_member.body.html
+++ b/api/src/templates/new_member.body.html
@@ -122,7 +122,7 @@
 <p>Here's a summary of the key points covered during the course:</p>
 
 <h3>About Stockholm Makerspace:</h3>
-<p>Stockholm Makerspace is a non-profit organization “for members by members”. This means that you too, as a member, are encouraged to participate and collaborate with the development of the organization.</p>
+<p>Stockholm Makerspace is a non-profit organization “for members, by members”. This means that you too, as a member, are encouraged to participate and collaborate with the development of the organization.</p>
 
 <h3>Getting Started:</h3>
 <p>First of all, make sure you have all you need to get started:</p>
