--- a/api/src/templates/new_member.body.html
+++ b/api/src/templates/new_member.body.html
@@ -45,7 +45,7 @@
         <li>&#128100; <a href="https://medlem.makerspace.se/">Din medlemssida</a></li>
         <li>&#x1F6D2; <a href="https://medlem.makerspace.se/shop">Medlemsshop</a></li>
         <li>&#128198; <a href="https://www.makerspace.se/kalendarium">Kalendarium</a></li>
-        <li>&#128213; <a href="https://wiki.makerspace.se/V%C3%A4lkommen_till_Stockholm_Makerspace">Wikisidor</a></li>
+        <li>&#128213; <a href="https://wiki.makerspace.se/V%C3%A4lkommen_till_Stockholm_Makerspace">Stockholm Makerspace egen wiki</a></li>
     </ul>
     <li>Kolla gärna vad andra medlemmar har delat på <a href="https://stockholmmakerspace.slack.com/archives/C4M0MJ96K">#projekt</a>-kanalen på Slack och få inspiration!</li>
     <li>Gå med i <a href="https://stockholmmakerspace.slack.com/archives/CGQ04052Q">#events</a>-kanalen på Slack för att få reda på kommande kurser, sammankomster och andra evenemang.</li>
