--- a/api/src/templates/new_member.body.html
+++ b/api/src/templates/new_member.body.html
@@ -71,7 +71,7 @@
     <li>...din användning av maskiner och utrustning. Du har ansvar för att du använder dessa på ett säkert sätt. Läs alltid de tillhörande skyltarna och informationen på wikin innan du sätter igång.</li>
     <li>...att följa vår nolltolerans mot brott. Avsteg leder till påföljder.</li>
     <li>...att följa vår nolltolerans mot alkohol. Avsteg leder till påföljder.</li>
-    <li>...att inte ta in kommersiell verksamhet. Det är okej att bygga prototyper för kommersiellt syfte, men det är förbjudet att bedriva tillverkning.</li>
+    <li>...att inte bedriva kommersiell verksamhet. Det är okej att bygga prototyper för kommersiellt syfte, men det är förbjudet att bedriva tillverkning.</li>
 </ul>
 <p>För mer information om reglerna när du besöker makerspacet, läs wikisidan med våra <a href="https://wiki.makerspace.se/Lokalregler">Lokalregler</a>.</p>
 
