--- a/api/src/templates/new_member.body.html
+++ b/api/src/templates/new_member.body.html
@@ -79,7 +79,7 @@
 <ul>
     <li>Pågående projekt, material och förvaringslådor kräver alla en förvaringslokal. Du kan skriva ut dessa i våra Memberbooth. Lär mer om dem på <a href="https://wiki.makerspace.se/Memberbooth">Memberbooth wikisida</a>.</li>
     <li>Alla medlemmar har rätt att ha en förvaringslåda på makerspacet. Du hittar information om dessa på <a href="https://wiki.makerspace.se/Medlemsf%C3%B6rvaring">wikisidan för medlemsförvaring</a>.</li>
-    <li>Om du ser en full soptunna så töm soporna, släng påsen i soprummet och sätt in en ny påse. Så här går det till: <a href="https://wiki.makerspace.se/St%C3%A4drutiner">Städningsrutin</a>.</li>
+    <li>Om du ser en full soptunna så töm soporna, släng påsen i soprummet och sätt in en ny påse. Så här går det till: <a href="https://wiki.makerspace.se/St%C3%A4drutiner">Städrutiner</a>.</li>
     <li>Kom ihåg! Du får inte förvara batterier i föreningens lokaler.</li>
 </ul>
 
