--- a/api/src/templates/new_member.body.html
+++ b/api/src/templates/new_member.body.html
@@ -86,7 +86,7 @@
 <h3>Några användbara länkar:</h3>
 <ul>
     <li><p>Söker du någon i styrelsen?<br>
-        Du hittar alla namn på <a href="https://wiki.makerspace.se/Styrelsen">Styrelse wikisida</a>, eller du kan också skicka ett mail till <a href="mailto:info@makerspace.se">info@makerspace.se</a>.</p>
+        Du hittar alla namn på <a href="https://wiki.makerspace.se/Styrelsen">Styrelse wikisida</a>, eller så kan du skicka ett mail till <a href="mailto:info@makerspace.se">info@makerspace.se</a>.</p>
     </li>
     <li>Söker du en inköpsansvarig?<br>
         Du hittar dem här: <a href="https://wiki.makerspace.se/Ink%C3%B6psansvariga">Wikisida för inköpsansvariga</a>.</li>
