--- a/api/src/templates/new_member.body.html
+++ b/api/src/templates/new_member.body.html
@@ -91,7 +91,7 @@
     <li>Söker du en inköpsansvarig?<br>
         Du hittar dem här: <a href="https://wiki.makerspace.se/Ink%C3%B6psansvariga">Wikisida för inköpsansvariga</a>.</li>
     <li>Söker du wikisidan för något av våra rum?<br>
-        Du hittar alla länkar till dem här: <a href="https://wiki.makerspace.se/Kategori:Rum">Rums</a>.</li>
+        Du hittar alla länkar till dem här: <a href="https://wiki.makerspace.se/Kategori:Rum">Rum</a>.</li>
 </ul>
 
 <p>Vi glädjer oss att ha dig som medlem i Stockholm Makerspace! Om du har några frågor som wikin inte kan svara på, tveka inte att skriva på Slack. Det finns alltid andra medlemmar som vill hjälpa dig.</p>
