--- a/api/src/templates/new_member.body.html
+++ b/api/src/templates/new_member.body.html
@@ -127,7 +127,7 @@
 <h3>Getting Started:</h3>
 <p>First of all, make sure you have all you need to get started:</p>
 <ul>
-    <li>Make sure you have your Accessy app. If you don´t, you will find all the information you need on the <a href="https://wiki.makerspace.se/Accessy">Accessy wiki page</a>.</li>
+    <li>Make sure you have installed the Accessy app. If you don´t, you will find all the information you need on the <a href="https://wiki.makerspace.se/Accessy">Accessy wiki page</a>.</li>
     <li>Make sure to download Slack (from <a herf="https://play.google.com/store/apps/details?id=com.Slack&hl=en_US&pli=1">Google Play</a> or <a href="https://apps.apple.com/se/app/slack/id618783545">Apple Store</a>), since it is the main means of communication at the makerspace. If you need help, check the <a href="https://wiki.makerspace.se/Slack">Slack Wiki page</a>.</li>
     <li>Here are links to other important online resources</li>
     <ul>
