--- a/api/src/templates/new_member.body.html
+++ b/api/src/templates/new_member.body.html
@@ -142,7 +142,7 @@
 
 <h3>Expected conduct at the space</h3>
 
-<p style="text-align:center;"><i>“Be considered. Be responsible.”</i></p>
+<p style="text-align:center;"><i>“Be considerate. Take responsibility.”</i></p>
 
 <p>Be considered towards other members:</p>
 <ul>
