--- a/api/src/templates/new_member.body.html
+++ b/api/src/templates/new_member.body.html
@@ -144,7 +144,7 @@
 
 <p style="text-align:center;"><i>“Be considerate. Take responsibility.”</i></p>
 
-<p>Be considered towards other members:</p>
+<p>Be considerate towards other members:</p>
 <ul>
     <li>Clean after yourself. Think that there will always be another member who will come after you and will want to use the same space that you are using. That member could be you.</li>
     <li>Follow proper use of equipment and premises. If the equipment is not used properly you may damage it and make it unavailable for other members. That member could be you.</li>
