--- a/api/src/templates/new_member.body.html
+++ b/api/src/templates/new_member.body.html
@@ -146,7 +146,7 @@
 
 <p>Be considerate towards other members:</p>
 <ul>
-    <li>Clean after yourself. Think that there will always be another member who will come after you and will want to use the same space that you are using. That member could be you.</li>
+    <li>Clean up after yourself. Remember that there will always be other members who will come after you, and who will want to use the same space that you are using. That member could be you.</li>
     <li>Follow proper use of equipment and premises. If the equipment is not used properly you may damage it and make it unavailable for other members. That member could be you.</li>
     <li>Inform if something is broken, missing, or needs to be resupplied. Things break. It will happen. If you cannot repair it then inform about it on Slack. If you don´t, it will remain broken for other members. That member could be you.</li>
     <li>Do not take equipment with you. If you take equipment home it will not be available for other members. That member could be you.</li>
