Replaced a line in english and an idiomatic change on a phrase.

--- a/api/src/templates/new_member.body.html
+++ b/api/src/templates/new_member.body.html
@@ -40,7 +40,7 @@
 <ul>
     <li>Se till att du har laddat ner appen Accessy. Om du inte redan gjort detta så hittar du den information du behöver på <a href="https://wiki.makerspace.se/Accessy">vår wikisida om Accessy</a>.</li>
     <li>Se till att ladda ner och ordna ett konto på appen Slack (från <a herf="https://play.google.com/store/apps/details?id=com.Slack&hl=en_US&pli=1">Google Play</a> eller <a href="https://apps.apple.com/se/app/slack/id618783545">Apple Store</a>), eftersom det är det huvudsakliga sättet att kommunicera med andra på makerspacet. Om du behöver mer information, läs <a href="https://wiki.makerspace.se/Slack">Slacks wikisida</a></li>
-    <li>Here are links to other important online resources</li>
+    <li>Här följer länkar till våra andra onlineresurser</li>
     <ul>
         <li>&#128100; <a href="https://medlem.makerspace.se/">Din medlemssida</a></li>
         <li>&#x1F6D2; <a href="https://medlem.makerspace.se/shop">Medlemsshop</a></li>
@@ -117,7 +117,7 @@
     Membership number: {{member.member_number}}<br/>
 </p>
 
-<p>We will use this email address to reach out to you. If it is not right, please email <a href="mailto:info@makerspace.se">info@makerspace.se</a>.</p>
+<p>We will use this email address to reach out to you. If this is not correct, please email <a href="mailto:info@makerspace.se">info@makerspace.se</a>.</p>
 
 <p>Here's a summary of the key points covered during the course:</p>
 
