--- a/api/src/templates/new_member.body.html
+++ b/api/src/templates/new_member.body.html
@@ -57,7 +57,7 @@
 <p>Visa hänsyn mot andra medlemmar:</p>
 <ul>
     <li>Städa alltid upp efter dig. Glöm inte att fler medlemmar kommer senare för att använda samma ytor och maskiner. Den medlemmen kan vara du.</li>
-    <li>Se till att använda utrustning och lokaler på ett korrekt sätt. Om utrustning används på felaktivt vis kan du skada utrustningen och göra den omöjlig att använda för fler medlemmar. Den medlemmen kan vara du.</li>
+    <li>Se till att använda utrustning och lokaler på ett korrekt sätt. Om utrustning används på felaktigt vis kan du skada utrustningen och göra den omöjlig att använda för fler medlemmar. Den medlemmen kan vara du.</li>
     <li>Informera om något är trasigt, försvunnet eller om det behöver fyllas på med något. Saker går sönder ibland, det är sånt som händer. Om du inte kan laga det själv så skriv på Slack. Om du inte gör det kommer utrustningen förbli trasig när fler medlemmar vill använda den. Den medlemmen kan vara du.</li>
     <li>Ta inte utrustning med dig. Om du tar hem saker är den inte tillgänglig för fler medlemmar. Den medlemmen kan vara du.</li>
 </ul>
