Last comments fixed.

--- a/api/src/templates/new_member.body.html
+++ b/api/src/templates/new_member.body.html
@@ -38,7 +38,7 @@
 <p>Först och främst, se till att du har allt du behöver för att komma igång:</p>
 <ul>
     <li>Se till att du har laddat ner appen Accessy. Om du inte redan gjort detta så hittar du den information du behöver på <a href="https://wiki.makerspace.se/Accessy">vår wikisida om Accessy</a>.</li>
-    <li>Se till att ladda ner och ordna ett konto på appen Slack (från <a herf="https://play.google.com/store/apps/details?id=com.Slack&hl=en_US&pli=1">Google Play</a> eller <a href="https://apps.apple.com/se/app/slack/id618783545">Apple Store</a>), eftersom det är det huvudsakliga sättet att kommunicera med andra på makerspacet. Om du behöver mer information, läs <a href="https://wiki.makerspace.se/Slack">Slacks wikisida</a></li>
+    <li>Se till att ladda ner och ordna ett konto på appen Slack (från <a href="https://play.google.com/store/apps/details?id=com.Slack&hl=en_US&pli=1">Google Play</a> eller <a href="https://apps.apple.com/se/app/slack/id618783545">Apple Store</a>), eftersom det är det huvudsakliga sättet att kommunicera med andra på makerspacet. Om du behöver mer information, läs <a href="https://wiki.makerspace.se/Slack">Slacks wikisida</a></li>
     <li>Här följer länkar till våra andra onlineresurser</li>
     <ul>
         <li>&#128100; <a href="https://medlem.makerspace.se/">Din medlemssida</a></li>
@@ -47,7 +47,7 @@
         <li>&#128213; <a href="https://wiki.makerspace.se/V%C3%A4lkommen_till_Stockholm_Makerspace">Stockholm Makerspace egen wiki</a></li>
     </ul>
     <li>Kolla gärna vad andra medlemmar har delat på <a href="https://stockholmmakerspace.slack.com/archives/C4M0MJ96K">#projekt</a>-kanalen på Slack och få inspiration!</li>
-    <li>Gå med i <a href="https://stockholmmakerspace.slack.com/archives/CGQ04052Q">#events</a>-kanalen på Slack för att få reda på kommande kurser, sammankomster och andra evenemang.</li>
+    <li>Håll koll i <a href="https://stockholmmakerspace.slack.com/archives/CGQ04052Q">#events-kanalen på Slack</a> för att se när kurser, sammankomster och andra evenemang annonseras.</li>
 </ul>
 
 <h3>Trivselregler</h3>
@@ -78,8 +78,8 @@
 <ul>
     <li>Pågående projekt, material och förvaringslådor kräver alla en förvaringsetikett. Du kan skriva ut dessa i våra Memberbooth. Lär mer om dem på <a href="https://wiki.makerspace.se/Memberbooth">Memberbooth wikisida</a>.</li>
     <li>Alla medlemmar har rätt att ha en förvaringslåda på makerspacet. Du hittar information om dessa på <a href="https://wiki.makerspace.se/Medlemsf%C3%B6rvaring">wikisidan för medlemsförvaring</a>.</li>
-    <li>Om du ser en full soptunna så töm soporna, släng påsen i soprummet och sätt in en ny påse. Så här går det till: <a href="https://wiki.makerspace.se/St%C3%A4drutiner">Städrutiner</a>.</li>
-    <li>Kom ihåg! Du får inte förvara batterier i föreningens lokaler.</li>
+    <li>Om du ser en full soptunna så töm soporna, släng påsen i soprummet och sätt in en ny påse. Här finns instruktioner hur du hittar det: <a href="https://wiki.makerspace.se/St%C3%A4drutiner">Städrutiner</a>.</li>
+    <li>Kom ihåg: du får inte förvara Li-ion-batterier i makerspace. Om de används felaktigt utgör de en brandrisk.</li>
 </ul>
 
 <h3>Några användbara länkar:</h3>
@@ -127,7 +127,7 @@
 <p>First of all, make sure you have all you need to get started:</p>
 <ul>
     <li>Make sure you have installed the Accessy app. If you don´t, you will find all the information you need on the <a href="https://wiki.makerspace.se/Accessy">Accessy wiki page</a>.</li>
-    <li>Make sure to download Slack (from <a herf="https://play.google.com/store/apps/details?id=com.Slack&hl=en_US&pli=1">Google Play</a> or <a href="https://apps.apple.com/se/app/slack/id618783545">Apple Store</a>), since it is the main means of communication at the makerspace. If you need help, check the <a href="https://wiki.makerspace.se/Slack">Slack Wiki page</a>.</li>
+    <li>Make sure to download Slack (from <a href="https://play.google.com/store/apps/details?id=com.Slack&hl=en_US&pli=1">Google Play</a> or <a href="https://apps.apple.com/se/app/slack/id618783545">Apple Store</a>), since it is the main means of communication at the makerspace. If you need help, check the <a href="https://wiki.makerspace.se/Slack">Slack Wiki page</a>.</li>
     <li>Here are links to other important online resources</li>
     <ul>
         <li>&#128100; <a href="https://medlem.makerspace.se/">Din medlemssida</a></li>
@@ -168,7 +168,7 @@
     <li>Stored projects, materials, and storage boxes require labels. You can get them at the Memberbooths. You can find more info about them on the <a href="https://wiki.makerspace.se/Memberbooth">Memberbooth wiki page</a>.</li>
     <li>Every member has the right to keep a storage box at the makerspace. You can find more information about them on the <a href="https://wiki.makerspace.se/Medlemsf%C3%B6rvaring">Member Storage Wiki page</a>.</li>
     <li>If you see a full trash bag, you can help by taking the bag to the trash room and replacing it with a new one. Here is how to do it: <a href="https://wiki.makerspace.se/St%C3%A4drutiner">Cleaning Routine</a>.</li>
-    <li>Remember: you are not allowed to store batteries in the makerspace.</li>
+    <li>Remember: you are not allowed to store Li-ion batteries in the makerspace. If misused, they are a fire hazard.</li>
 </ul>
 
 <h3>Some references:</h3>
