Change to link directly to calendly in new member email, since the calendar no longer links to it.

--- a/api/src/templates/new_member.body.html
+++ b/api/src/templates/new_member.body.html
@@ -32,7 +32,7 @@
 
 <p>
     <b>Makerspace Access</b><br/>
-    För medlemmar som har Makerspace Access så är lokalen öppen dygnet runt, året runt, men för att komma in första gången så måste du besöka en medlemsintroduktion. Medlemsintroduktioner äger rum ungefär varannan vecka, och datum hittar du i vårt <a href="https://makerspace.se/kalendarium">kalendarium</a>. För få access måste du skriva under ett avtal där du ålägger dig att följa våra <a href="https://wiki.makerspace.se/Lokalregler">lokalregler</a>, samt visa ID.
+    För medlemmar som har Makerspace Access så är lokalen öppen dygnet runt, året runt, men för att komma in första gången så måste du besöka en medlemsintroduktion. Medlemsintroduktioner äger rum ungefär varannan vecka, och <a href="https://calendly.com/medlemsintroduktion/medlemsintroduktion">du kan anmäla dig här</a>. För få access måste du skriva under ett avtal där du ålägger dig att följa våra <a href="https://wiki.makerspace.se/Lokalregler">lokalregler</a>, samt visa ID.
 </p>
 
 <h3>Jag vill gå kurs! När är det kurs?</h3>
@@ -112,7 +112,7 @@
     As a member in the organisation you’re welcome to attend our events and workshops, as well as vote at the annual meeting. If you wish to do independent projects on your own on the premises, you need to become a makerspace access member.</p>
 
 <p><b>Makerspace Access</b><br/>
-    The premises are open 24/7 for members who have Makerspace Access, all year long, but to start gaining access you need to attend a new member introduction. New member introductions occur approximately every two weeks, and they’re called "medlemsintroduktion" in our <a href="https://makerspace.se/kalendarium">calendar</a>. To get access you need to sign an agreement where you agree to adhere to <a href="https://wiki.makerspace.se/Rules_for_Makerspace"></a>our rules</a>, and you also need to show an ID.</p>
+    The premises are open 24/7 for members who have Makerspace Access, all year long, but to start gaining access you need to attend a new member introduction. New member introductions occur approximately every two weeks, and you can <a href="https://calendly.com/medlemsintroduktion/medlemsintroduktion">sign up to one here</a>. To get access you need to sign an agreement where you agree to adhere to <a href="https://wiki.makerspace.se/Rules_for_Makerspace"></a>our rules</a>, and you also need to show an ID.</p>
 
 <h3>I want to go to a workshop! When is the next workshop?</h3>
 <p>All activities are run by volunteers, like you and me. We help each other learn the machines so that everyone can work independently. Share what you can, and ask for help if you get stuck. Some machines require that you have gone to a course for in order to be able to use, for example:  welding (svetsrummet), laser cutter, embroidery-machine and resin printer. Courses are advertised in the Facebook group and on Slack and can be found on the calendar. There is no queue - first come, first served.</p>
