--- a/public/src/templates/licenses.html
+++ b/public/src/templates/licenses.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Licenser och Rabatter - Stockholm Makerspace Webshop</title>
+        <title>Licenser och Rabatter - Stockholm Makerspace</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="{{ STATIC }}/uikit/css/uikit.min.css" />
