Fix typo in 'Stockholm Makerpace'.

--- a/api/src/templates/box_terminated.body.html
+++ b/api/src/templates/box_terminated.body.html
@@ -25,6 +25,6 @@
 <p>
   If you feel that this is not the case, please contact <a href="mailto: info@makerspace.se">info@makerspace.se</a> as soon as possible.<br/>
   Sincerely,<br/>
-  Stockholm Makerpace<br/>
+  Stockholm Makerspace<br/>
 </p>
 {% endblock %}
