Allow member portal to know about admin url, so that it can link there.

--- a/public/src/templates/meta.html
+++ b/public/src/templates/meta.html
@@ -2,6 +2,7 @@
 <script>
     window.stripeKey = "{{ meta.stripe_public_key }}";
     window.apiBasePath = "{{ meta.api_base_url }}";
+    window.hostAdminFrontend = "{{ meta.host_frontend }}";
     window.staticBasePath = "{{ STATIC }}";
 </script>
 <script
