--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1,7 +1,29 @@
 @use "sass:color";
 @use "include-media";
 // Bebas Neue font for label printing
-@import url("https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap");
+/* latin-ext */
+@font-face {
+    font-family: "Bebas Neue";
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url("{{STATIC}}/fonts/bebas_neue_latin_ext.woff2") format("woff2");
+    unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7,
+        U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F,
+        U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F,
+        U+A720-A7FF;
+}
+/* latin */
+@font-face {
+    font-family: "Bebas Neue";
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url("{{STATIC}}/fonts/bebas_neue_latin.woff2") format("woff2");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+        U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191,
+        U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
 include-media.$breakpoints: (phone: 320px, tablet: 800px, desktop: 1024px);
 
@@ -2250,6 +2272,62 @@ code {
 
         .label-expires-at {
             color: #f0506e;
+        }
+    }
+}
+
+.label-messages {
+    padding-left: 20px;
+    padding-right: 20px;
+    max-width: 80%;
+    width: 500px;
+
+    li {
+        display: flex;
+        min-height: 50px;
+
+        color: #333;
+        border-radius: 4px;
+        margin-bottom: 30px;
+        overflow: hidden;
+        text-decoration: none;
+        background: white;
+        transition: 100ms background-color;
+
+        // Designed using: https://shadows.brumm.af/
+        box-shadow:
+            0px 0.1px 0.3px rgba(0, 0, 0, 0.034),
+            0px 0.3px 0.7px rgba(0, 0, 0, 0.048),
+            0px 0.5px 1.3px rgba(0, 0, 0, 0.06),
+            0px 0.9px 2.2px rgba(0, 0, 0, 0.072),
+            0px 1.7px 4.2px rgba(0, 0, 0, 0.086),
+            0px 4px 10px rgba(0, 0, 0, 0.12);
+
+        a {
+            box-sizing: border-box;
+            align-self: stretch;
+            flex-grow: 1;
+            flex-shrink: 1;
+            flex-basis: 0;
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: center;
+            padding-left: 20px;
+            padding-right: 20px;
+            gap: 10px;
+            color: black;
+
+            .label-message-date {
+                flex: 120px;
+                flex-grow: 0;
+            }
+
+            &:hover {
+                background: color.adjust(#fff, $lightness: -6%);
+                text-decoration: none;
+            }
         }
     }
 }
