Fix frontend urls when hosted at a sub-path.

--- a/public/src/templates/meta.html
+++ b/public/src/templates/meta.html
@@ -4,6 +4,7 @@
     window.apiBasePath = "{{ meta.api_base_url }}";
     window.hostAdminFrontend = "{{ meta.host_frontend }}";
     window.staticBasePath = "{{ STATIC }}";
+    window.basePath = "{{ BASE_PATH }}";
 </script>
 <script
     defer
